# jbpf-protobuf

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  README.md  SUPPORT.md  init_submodules.sh  setup_jbpfp_env.sh
.github/workflows/: ubuntu2204.yml  workflow.yaml
deploy/: Dockerfile  README.md  azurelinux.Dockerfile  entrypoint.sh  jbpf_protobuf_cli.Dockerfile  mariner.Dockerfile  ubuntu20.04.Dockerfile  ubuntu20_04.Dockerfile  ubuntu22.04.Dockerfile  ubuntu22_04.Dockerfile  ubuntu24_04.Dockerfile
docs/: design.md
examples/first_example_ipc/: .gitignore  Makefile  README.md  codeletset_load_request.yaml  example_app.cpp  example_codelet.c  example_collect_control.cpp  load.sh  run_collect_control.sh  run_decoder.sh  schema.options  send_control.sh  send_input_msg.sh  unload.sh
examples/first_example_standalone/: .gitignore  Makefile  README.md  codeletset_load_request.yaml  codeletset_unload_request.yaml  example_app.cpp  example_codelet.c  load.sh  run_app.sh  schema.proto  unload.sh
git-hooks/: clang-format-pre-commit.sh  go-format-pre-commit.sh
pkg/: .gitignore  .golangci.yml  CMakeLists.txt  Makefile  README.md  go.mod  go.sum  main.go
pkg/__snapshots__/example1/: example.pb  example.pb.c  example.pb.h  example:req_resp_serializer.c  example:status_serializer.c
pkg/__snapshots__/example2/: example2.pb  example2.pb.c  example2.pb.h  example2:item_serializer.c
pkg/__snapshots__/example3/: example3.pb  example3.pb.c  example3.pb.h  example3:obj_serializer.c
pkg/cmd/decoder/: decoder.go
pkg/cmd/decoder/control/: control.go
pkg/cmd/decoder/load/: load.go  load_config.go
pkg/cmd/decoder/run/: run.go
pkg/cmd/decoder/unload/: unload.go  unload_config.go
pkg/cmd/input/: input.go
pkg/cmd/input/forward/: forward.go
pkg/cmd/serde/: serde.go  serde_test.go
pkg/common/: codeletset_config.go  codeletset_raw_config.go  file.go  options.go  subproc.go  uncolored_text_formatter.go
pkg/data/: server.go  server_options.go
pkg/generator/nanopb/: files.go  nanopb.go
pkg/generator/schema/: schema.go
pkg/generator/stream/: _serializer.c.tpl  stream.go  templates.go
pkg/jbpf/: client.go  options.go
pkg/schema/: client.go  client_options.go  model.go  options.go  serve.go  server.go  server_options.go  store.go
testdata/example1/: example.options  example.proto
testdata/example2/: example2.options  example2.proto
testdata/example3/: example3.options  example3.proto
